# gross

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
battery/: Cargo.toml
gross/: Cargo.toml
gross/src/: main.rs
gross/src/music/: images.rs
hyprland/: Cargo.toml
hyprland/src/: lib.rs
music/: Cargo.toml
music/src/: lib.rs  music.rs
network_manager/: Cargo.toml
network_manager/src/: main.rs
notifications/: Cargo.toml
notifications/src/: dbus.rs  icon.rs  lib.rs  types.rs
src/: battery.rs  hyprland.rs  main.rs  music.rs  music_time.rs
src/music/: images.rs  utils.rs
