[package]
name = "gross"
description = "Eww JSON generator"
authors = ["Mihai Fufezan"]
repository = "https://github.com/fufexan/gross"
license = "MIT"
keywords = ["eww", "helper", "json"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
dirs = "5.0"
fastblur = { git = "https://github.com/fschutt/fastblur" }
futures = "0.3.28"
image = "0.24.6"
mpris = "2.0.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
upower_dbus = "0.3.2"
urlencoding = "2.1.2"
zbus = "3.13.1"
