[package]
name = "gross"
description = "Eww JSON generator"
authors = ["Mihai Fufezan"]
repository = "https://github.com/fufexan/gross"
license = "MIT"
keywords = ["eww", "helper", "json"]
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
clap = { version = "4", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
dirs = "5.0"
env_logger = "0.10.0"
fastblur = { git = "https://github.com/fschutt/fastblur" }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs" }
image = "0.24.6"
log = "0.4.19"
material-color-utilities-rs = { version = "0.2.1", features = ["serde"] }
mpris = "2.0.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.32.0"
urlencoding = "2.1.2"
