[package]
name = "battery"
description = "Battery JSON generator for Eww"
authors = ["Mihai Fufezan"]
repository = "https://github.com/fufexan/gross"
license = "MIT"
keywords = ["eww", "helper", "json"]
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"

[dependencies]
battery = "0.7.8"
serde_json = "1.0"
