[package]
name = "gross"
description = "Eww JSON generator"
authors = ["Mihai Fufezan"]
repository = "https://github.com/fufexan/gross"
license = "MIT"
keywords = ["eww", "helper", "json"]
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = { path = "../battery" }
clap = { version = "4", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
music = { path = "../music" }
hyprland = { path = "../hyprland" }
log = "0.4.19"
