[package]
name = "music"
description = "MPRIS JSON generator"
authors = ["Mihai Fufezan"]
repository = "https://github.com/fufexan/gross"
license = "MIT"
keywords = ["eww", "helper", "json"]
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"

[dependencies]
dirs = "5.0"
fastblur = { git = "https://github.com/fschutt/fastblur" }
image = "0.24.6"
log = "0.4.19"
material-color-utilities-rs = { version = "0.2.1", features = ["serde"] }
mpris = "2.0.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.2"
