[package]
name = "network_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
zbus = "3.14.1"
zbus_names = "2.6.0"
